# smol-workflows

./: .gitignore  Cargo.toml  README.md  install.sh  package.json  shell.nix
.agents/workflows/: exe-dev-provider-e2e.mjs  rust-crate-publish.js  rust-release-install-verify.js  security-review.mjs  ts-sdk-publish.js
.agents/workflows/archives/: README.md  exe-dev-sandbox-impl.mjs
.github/workflows/: agent-tools-image.yml  cargo-publish.yml  harness-provider-smoke.yml  npm-sdk-publish.yml  release.yml  rust-tests.yml  typescript-tests.yml
agents/workflows/archives/: exe-dev-sandbox-impl.mjs
containers/agent-tools/: Dockerfile  README.md
docs/: design.md  design_durable_workflow.md  harness-integration.md  workflow-reference.md
docs/experiments/: exe-dev-sandbox.md  rust_js_runtime.md  sandbox.md
docs/harness-capabilities/: budget-and-usage.md  environment.md  input-and-env.md  session-event.md  session-traceability.md  structured-output.md
docs/js/: workflow_extra.md  workflow_sandbox.md
docs/usages/: config.md  events.md  history.md  llm.md  run.md  tui.md
docs/workflow/: durable_sleep.md  exception.md  retry.md
examples/: budget.mjs  hello.mjs  isolation.mjs  jsconfig.json  opencode-session-prompt.mjs  package.json  pi-structured-output-demo.mjs  pi-structured-output-extension.ts  pod-diagnostics.mjs  refine-agent-providers.mjs  sleep.mjs  stock.mjs  workflow-child.mjs  workflow-parent.mjs
examples/azure-sandbox/: README.md  config.example.json  isolated-agent.workflow.mjs
examples/exe-dev-sandbox/: README.md  config.example.json  isolated-agent.workflow.mjs
hack/: record-stock-tui-demo.sh  sync-cli-skill-assets.sh
harness/: README.md  package.json
harness/.agents/plugins/: marketplace.json
harness/.claude-plugin/: marketplace.json
harness/opencode/: package.json  plugin.js
harness/opencode/scripts/: smol-wf.sh
harness/pi/: extension.ts  package.json
rust/: AGENTS.md
rust/cli/: Cargo.toml  README.md
rust/cli/assets/: help.txt  llm.txt
rust/cli/assets/skills/list/: SKILL.md
rust/cli/src/: dto_history.rs  main.rs  paths.rs  tui.rs
rust/cli/src/tui/: provider.rs
rust/cli/src/tui/provider/: claude_code.rs  codex.rs  common.rs  opencode.rs  pi.rs
rust/cli/tests/: cli.rs  e2e_real_agents.rs
rust/cli/tests/assets/e2e_real_agents/: events-child.mjs  events.mjs
rust/engine/: Cargo.toml  README.md  build.rs
rust/engine/migrations/: 1.sql  2.sql  3.sql
rust/engine/src/: environment.rs  events.rs  lib.rs  metadata.rs  workflow.rs
rust/engine/src/agent_providers/: claude_code.rs  codex.rs  common.rs  debug.rs  mod.rs  opencode.rs  pi.rs  types.rs
rust/engine/src/agent_providers/assets/: opencode-server-helper.sh
rust/engine/src/durable/: json.rs  mod.rs  runner.rs  sqlite.rs
rust/engine/src/environment/: local.rs  sandbox.rs
rust/engine/src/js_runtime/: mod.rs  rquickjs.rs
rust/engine/src/js_runtime/assets/: workflow_extra.js  workflow_sandbox.js
rust/engine/src/js_runtime/rquickjs_js/: sandbox_prelude.js
rust/engine/tests/: agent_providers_cli.rs  debug_provider.rs  js_runtime.rs  metadata.rs  workflow_integration.rs
rust/engine/tests/assets/js_runtime/: sandbox-exec.workflow.js
rust/engine/tests/assets/workflow_integration/: dynamic-parallel-agents.workflow.js  limited-parallel-agents.workflow.js  parallel-agents.workflow.js  phase-defaults.workflow.js  provider-override.workflow.js  sandbox-isolated-agent.workflow.js  serial-parallel-agents.workflow.js  worktree-isolated-agent.workflow.js
rust/engine/tests/fixtures/: args.yaml  budget-child.workflow.js  budget-parent.workflow.js  cli-args.workflow.js  fake-claude-provider.mjs  fake-codex-io-error.mjs  fake-codex-provider.mjs  fake-opencode-provider.mjs  fake-pi-provider.mjs  function-stack-error.workflow.js  injected-globals.workflow.js  metadata-call.workflow.js  metadata-comments.workflow.js  metadata-dynamic.workflow.js  metadata-not-exported.workflow.js  metadata-pure.workflow.js  module-result.workflow.js  nested-parent.workflow.js  no-meta.workflow.js  on-agent-usage-budget.workflow.js  parallel-errors.workflow.js  phase-provider-metadata.workflow.js  pipeline.workflow.js  protected-globals.workflow.js  schema-validation.workflow.js  sleep-child.workflow.js  sleep-parent.workflow.js  sleep.workflow.js  stack-error.workflow.js  string-error.workflow.js
rust/sandbox/: Cargo.toml  README.md
rust/sandbox-providers/exe-dev/: Cargo.toml  README.md
rust/sandbox-providers/exe-dev/src/: config.rs  error.rs  exe_api.rs  jsonl_server.rs  lib.rs  main.rs  provider.rs  quoting.rs  ssh.rs  state.rs
rust/sandbox-providers/exe-dev/tests/: jsonl_scaffold.rs
rust/sandbox/schema/: sandbox.v1.schema.json
rust/sandbox/src/: jsonl.rs  jsonl_server.rs  lib.rs  plugin.rs  v1.rs
rust/sandbox/tests/: json_protocol.rs
rust/sandbox/tests/fixtures/: capabilities_request.json  capabilities_response.json  cleanup_group_request.json  close_request.json  error_response.json  error_response_envelope.json  exec_event_envelope.json  exec_request.json  exec_request_envelope.json  exec_response.json  exec_response_envelope.json  open_request.json  open_request_envelope.json  open_response.json  open_response_envelope.json
sandbox-providers/: azure-sandbox  local-worktree  test_azure_sandbox.py  test_local_worktree.py
ts/engine/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
ts/engine/src/: budget.ts  cli.ts  index.ts  metadata.ts  runner.ts  schema-validation.ts
ts/engine/src/backends/: absurd.ts
ts/engine/test/: absurd-backend.test.ts  budget.test.ts  cli.test.ts  helpers.ts  metadata.test.ts  run-workflow.test.ts
ts/sdk/: AGENTS.md  LICENSE  README.md  changelogs.md  package-lock.json  package.json
ts/sdk/src/: index.ts  json-schema.ts  pipeline.ts  sandbox.ts  tool.ts  workflow-extra-virtual.d.ts  workflow-extra.ts  workflow-sandbox-virtual.d.ts  workflow-sandbox.ts
(+33 files in other folders)
