[package]
name = "smol-workflow-cli"
description = "CLI for the smol-workflows Rust engine."
version.workspace = true
edition.workspace = true
license-file = "../../LICENSE"
repository = "https://github.com/b4fun/smol-workflows"
readme = "README.md"

[[bin]]
name = "smol-wf"
path = "src/main.rs"

[features]
default = []
# Enables real integration tests that run in temporary workspaces.
integration-test = ["smol-workflow-engine/integration-test"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = "4"
comfy-table = "7"
crossterm = "0.28"
log = "0.4"
ratatui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
smol-workflow-engine = { version = "0.3.4-alpha.4", path = "../engine" }
time = { version = "0.3", features = ["formatting", "local-offset", "parsing"] }
tokio = { version = "1", features = ["macros", "rt", "signal", "sync"] }
