[package]
name = "smol-workflow-engine"
description = "Rust implementation of the smol-workflows engine."
version.workspace = true
edition.workspace = true

[lib]
name = "smol_workflow_engine"
path = "src/lib.rs"

[features]
default = []
# Enables provider conveniences needed by real integration tests in temporary workspaces.
integration-test = []

[dependencies]
anyhow = "1"
log = "0.4"
rquickjs = "0.11"
rquickjs-serde = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt", "sync"] }
ureq = { version = "2", features = ["json"] }
