[package]
name = "smol-workflow-engine"
description = "Rust implementation of the smol-workflows engine."
version.workspace = true
edition.workspace = true
license-file = "../../LICENSE"
repository = "https://github.com/b4fun/smol-workflows"
readme = "README.md"

[lib]
name = "smol_workflow_engine"
path = "src/lib.rs"

[features]
default = []
# Enables real integration tests that run in temporary workspaces.
integration-test = []

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
blake3 = "1"
jsonschema = { version = "0.46", default-features = false }
log = "0.4"
rquickjs = { version = "0.11", features = ["loader"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rquickjs-serde = "0.5"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol-workflow-sandbox = { version = "0.3.4-alpha.1", path = "../sandbox" }
tempfile = "3"
time = { version = "0.3", features = ["formatting"] }
ulid = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt", "sync", "time"] }
ureq = { version = "2", features = ["json"] }
